# djangd

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: storybook.yml  test.yml
djangd_framework/: __init__.py  apps.py  registry.py
djangd_framework/components/: __init__.py
djangd_framework/management/commands/: djangd_build_css.py
djangd_framework/static/djangd/scss/: djangd.scss
djangd_framework/templates/djangd/components/: _macros.html  _tree_node.html  accordion.html  alert.html  app_bar.html  aspect_ratio.html  autocomplete.html  avatar.html  avatar_group.html  backdrop.html  badge.html  banner.html  bottom_navigation.html  box.html  breadcrumbs.html  button.html  button_group.html  calendar.html  card.html  carousel.html  checkbox.html  chip.html  circular_progress.html  code.html  color_picker.html  command.html  container.html  date_picker.html  description_list.html  dialog.html  divider.html  drawer.html  dropdown_menu.html  elevation.html  empty_state.html  fab.html  (+50 more)
djangd_framework/templatetags/: djangd.py
docs/: ACCESSIBILITY.md  EXTENDING.md
example/: manage.py
example/example_app/: apps.py  components.py  views.py
example/example_project/: settings.py  urls.py
storybook/: package-lock.json  package.json  variants.py
storybook/.storybook/: main.js  manager-head.html  preview-head.html  preview.css  preview.js
storybook/scripts/: render.py
storybook/stories/: Autocomplete.stories.js  Box.stories.js  Button.stories.js  ButtonGroup.stories.js  Card.stories.js  Data.stories.js  Feedback.stories.js  Introduction.mdx  Layout.stories.js  Link.stories.js  Modern.stories.js  Navigation.stories.js  Overlays.stories.js  Selection.stories.js  TextField.stories.js  TransferList.stories.js  _helpers.js
tests/: settings.py  test_components.py  test_registry.py  test_tree_shake.py
(+27 files in other folders)
